assets/css/styles.css
/* GENERAL STYLING */
html,
body {
    height: 100%;
}

* {
    font-family: "Oswald";
}

ul {
    margin: 0;
    list-style: none;
    padding: 0;
}

/* OPTIONS PANEL */

#nav-btn {
    border: none;
    outline: none;
    cursor: pointer;
    background-color: rgba(156, 137, 128, .8);
    color: white;
    padding: 10px;
    font-size: 80px;
    position: absolute;
    right: 0;
    top: 10px;
    z-index: 1;
    -moz-box-shadow: 5px -5px 10px -2px #777;
    -ms-box-shadow: 5px -5px 10px -2px #777;
    -o-box-shadow: 5px -5px 10px -2px #777;
    -webkit-box-shadow: 5px -5px 10px -2px #777;
    box-shadow: 5px -5px 10px -2px #777;
}

#nav-btn:hover {
    background-color: rgba(156, 137, 128, 1);
}

#options {
    height: 95%;
    width: 280px;
    z-index: 1;
    position: absolute;
    top: 20px;
    right: 0;
    text-align: center;
    display: none;
    opacity: 1;
    -moz-box-shadow: 5px -5px 10px -2px #777;
    -ms-box-shadow: 5px -5px 10px -2px #777;
    -o-box-shadow: 5px -5px 10px -2px #777;
    -webkit-box-shadow: 5px -5px 10px -2px #777;
    box-shadow: 5px -5px 10px -2px #777;
}

#header {
    height: 40%;
    width: 100%;
    background-color: rgba(195, 195, 148, .8);
    vertical-align: center;
    position: relative
}

#nav-close {
    background: none;
    border: none;
    outline: none;
    cursor: pointer;
    position: absolute;
    left: 10px;
    top: 10px;
    font-size: 20px;
    z-index: 2;
}

#title {
    font-size: 50px;
    letter-spacing: 1px;
    padding: 20px 10px 10px 10px;
    line-height: 1.5;
    -moz-filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .8));
    -ms-filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .8));
    -o-filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .8));
    -webkit-filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .8));
    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .8));
    margin: 0;
    color: white;
}

#logo {
    width: 80px;
    display: inline;
}

#show-hikes {
    font-family: "Oswald";
    color: white;
    font-size: 14px;
    border: none;
    background: #9c8980;
    padding: 5px 8px;
    font-weight: 200;
    outline: none;
    -moz-box-shadow: 0 6px 3px -3px #777;
    -ms-box-shadow: 0 6px 3px -3px #777;
    -o-box-shadow: 0 6px 3px -3px #777;
    -webkit-box-shadow: 0 6px 3px -3px #777;
    box-shadow: 0 6px 3px -3px #777;
    cursor: pointer;
    margin-top: 0;
}

#show-hikes:active {
    opacity: .5;
    -moz-box-shadow: none;
    -ms-box-shadow: none;
    -o-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}

#difficulty-select {
    border: none;
    background: white;
    outline: none;
    font-family: inherit;
    font-size: 12px;
    margin: 40px auto 10px auto;
    display: block;
    cursor: pointer;
}

/* Hikes List */

#hikes {
    right: 0px;
    height: 60%;
    width: 100%;
    overflow: scroll;
    background-color: rgba(233, 234, 220, 0.8);
}

.list-items {
    border-bottom: 1px solid #aaa;
    cursor: pointer;
    height: 85px;
    text-align: left;
}

.list-items:active {
    -moz-box-shadow: none;
    -ms-box-shadow: none;
    -o-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    background-color: rgba(233, 234, 220, 0.6);
}

.trail-imgs {
    width: 100px;
    height: 85px;
    float: left;
    margin-right: 20px;
}

.trail-names {
    margin: 0;
    padding-top: 15px;
    font-size: 18px;
    -moz-text-shadow: 0px 1px 1px rgba(50, 50, 50, .5);
    -ms-text-shadow: 0px 1px 1px rgba(50, 50, 50, .5);
    -o-text-shadow: 0px 1px 1px rgba(50, 50, 50, .5);
    -webkit-text-shadow: 0px 1px 1px rgba(50, 50, 50, .5);
    text-shadow: 0px 1px 1px rgba(50, 50, 50, .5);
}

.difficulty {
    font-weight: 300;
    font-size: 14px;
    margin-left: 0;
    color: white;
    text-shadow: none;
}

/* MAP PANEL */

#map {
    border-top: solid 1px #e8e9db;
    bottom: 0px;
    height: 100%;
    position: absolute;
    left: 0px;
    right: 0px;
}

/* INFOWINDOW */

.load-icon {
    margin: 20px 40px 0px 50px;
}

.load-msg {
    text-align: center;
}

#venue-info > * {
    margin: 0;
}

#venue-info h3 {
    font-size: 20px;
}

#details {
    margin-top: 10px;
}

.strong {
    font-weight: bold;
}

.album-head {
    margin-bottom: 0;
    text-decoration: underline;
}

#venue-photos {
    height: 200px;
    width: 100%;
    overflow: scroll;
    margin-top: 10px;
    margin-left: 10px;
}

.photos {
    width: 80px;
    height: 50px;
    margin: 3px 5px;
}

.attribution {
    font-size: .8em;
    text-align: center;
    font-style: italic;
    font-weight: 200;
}

/* Medium Mobile (Portrait) */

@media and (orientation: portrait)
and (min-width: 375px) and (max-width: 749px) {
    #show-hikes {
        margin-top: 10px;
        font-size: 18px;
    }
    #difficulty-select {
        margin-top: 50px;
        font-size: 14px;
    }
}

/* Tablets (Portrait) */

@media (orientation: portrait)
and (min-width: 750px) and (max-width: 1000px) {
    #options {
        width: 420px;
    }
    #title {
        padding-top: 50px;
        font-size: 60px;
    }
    #logo {
        width: 90px;
    }
    #show-hikes {
        font-size: 22px;
    }
    #difficulty-select {
        margin-top: 140px;
        font-size: 18px;
    }
    .list-items {
        height: 130px;
    }
    .trail-imgs {
        width: 190px;
        height: 130px;
    }
    .trail-names {
        padding-top: 30px;
        font-size: 24px;
    }
    .difficulty {
        font-size: 18px;
        margin-bottom: 30px;
    }
}

/* Large Tablets (Portrait) */

@media (orientation: portrait)
and (min-width: 1000px)  {
    #options {
        width: 600px;
    }
    #title {
        padding-top: 80px;
        font-size: 80px;
    }
    #logo {
        width: 100px;
    }
    #show-hikes {
        margin-top: 20px;
        font-size: 30px;
    }
    #difficulty-select {
        margin-top: 170px;
        font-size: 24px;
    }
    .list-items {
        height: 190px;
    }
    .trail-imgs {
        width: 230px;
        height: 190px;
    }
    .trail-names {
        padding-top: 50px;
        font-size: 30px;
    }
    .difficulty {
        font-size: 24px;
        margin-bottom: 50px;
    }
}

/* Small and Medium Mobile (Landscape) */

@media (orientation: landscape) {
    #options {
        height: 90%;
    }
    #header {
        height: 60%;
    }
    #hikes {
        height: 40%;
    }
    #title {
        font-size: 20px;
    }
    #logo {
        width: 40px;
    }
    #show-hikes {
        font-size: 10px;
    }
    #difficulty-select {
        font-size: 10px;
    }
}

/* ONLY Medium Mobile (Landscape) */

@media (orientation: landscape)
and (min-width: 640px) and (max-width: 750px) {
    #title {
        font-size: 24px;
    }
    #logo {
        width: 50px;
    }
    #show-hikes {
        font-size: 14px;
    }
    #difficulty-select {
        margin-top: 60px;
        font-size: 12px;
    }
}

/* Tablets and Large Tablets (Landscape), Laptops, Desktops */

@media (orientation: landscape)
and (min-width: 751px) {
    #options {
        width: 420px;
    }
    #header {
        height: 40%;
    }
    #hikes {
        height: 50%;
    }
    #title {
        font-size: 60px;
    }
    #logo {
        width: 100px;
    }
    #show-hikes {
        font-size: 20px;
    }
    #difficulty-select {
        margin-top: 60px;
        font-size: 16px;
    }
    .list-items {
        height: 130px;
    }
    .trail-imgs {
        width: 190px;
        height: 130px;
    }
    .trailName {
        padding-top: 30px;
        font-size: 20px;
    }
    .difficulty {
        font-size: 16px;
        margin-bottom: 30px;
    }
}

/* ONLY Laptops, Desktops */
@media (min-width: 1024px) {
    #navClose:hover {
        opacity: .5;
        transition: .5s;
    }
    #showHikes:hover {
        box-shadow: none;
        -moz-box-shadow: none;
        -webkit-box-shadow: none;
        opacity: .5;
        transition: .5s;
    }
    .listItem:hover {
        background-color: rgba(233, 234, 220, .8);
        transition: .5s;
    }
}

